--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "$STAR",
-  "name": "$STAR on Base",
+  "name": "$STAR on Solana",
   "icons": [
     {
       "src": "favicon.ico",
